src/styles/auth.scss
.auth {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: rgba(0,0,0,0.7);
    z-index: 1;
}

.authForm {
    position: relative;
    padding: 15px;
    background: #fff;
    width: 960px;
    margin: 300px auto;
    -webkit-box-shadow: inset 0 0 2px;
    box-shadow: inset 0 0 2px;
    height: auto;
    text-align: center;

    button {
        cursor: pointer;
    }

    h2.authHeader {
      font-size: 32px;
      margin-top: 0;
    }

    ul {
        list-style-type: none;
        margin: 0 auto;
        width: 500px;
        text-align: center;
        padding: 0;
    }

    li {
        margin: 20px 0;

        label {
            display: inline-block;
            width: 100px;
        }
        input {
            width: 300px;
            padding: 10px;
            border: 1px solid #ddd;
            border-radius: 50px;

            -moz-transition: box-shadow 0.2s;
            -webkit-transition: -webkit-box-shadow 0.2s;
            -o-transition: box-shadow 0.2s;
            transition: box-shadow 0.2s;

            &:focus {
                outline: 0;
                -webkit-box-shadow: inset 1px #666;
                box-shadow: inset 0 0 2px #666;
            }
        }
    }

    .submitButton {
        border: 0;
        padding: 10px;
        font-size: 15px;
        color: #fff;
        background-color: #00cc00;
        width: 125px;

        &:hover {
            background-color: #00bb00;
        }
    }
}

.errorMessage {
    color: red;
}

